# alignment-hive

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  package.json  remote-kernels.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.githooks/: pre-commit
.github/hooks/: update-comment.sh
.github/prompts/: issue.md  pr-review.md
.github/workflows/: claude-issue.yml  claude-pr.yml  release-notes.yml
crates/: CLAUDE.md
crates/remote-kernels/: CLAUDE.md  Cargo.toml  dist.toml
crates/remote-kernels/src/: config.rs  descriptions.rs  heartbeat.rs  lib.rs  main.rs  notebook.rs  server.rs  ssh.rs  state.rs  sync.rs
crates/remote-kernels/src/jupyter/: messages.rs  mod.rs  rest.rs  ws.rs
crates/remote-kernels/src/runpod/: client.rs  types.rs
docs/: claude-code-productivity-workstreams.md  gpu-tool-design.md  gpu-tool-implementation-notes.md  permissions-research-session-2.md  permissions-session-1.md  permissions-session-2.md  permissions-session-3.md  permissions-session-4.md  remote-kernels-test-findings.md
hive-mind/cli/: cli.ts
hive-mind/cli/commands/: session-start.ts  upload.ts
hive-mind/cli/lib/: auth.ts  config.ts  extraction.ts  messages.ts  upload-eligibility.ts
plugins/autopilot/.claude-plugin/: plugin.json
plugins/hive-mind/: cli.js
plugins/remote-kernels/: .mcp.json  CLAUDE.md
release-notes/: post-to-slack.ts  state.json
scripts/: aggregate-tool-calls.py  analyze-command-timing.py  collect-permissions.py  extract-unique-commands.py
web/convex/: sessions.ts
web/public/: cheatsheet.html
(+28 files in other folders)
