[package]
name = "remote-kernels"
version = "0.1.0"
edition = "2024"
description = "MCP server for spinning up cloud GPU instances and interacting with persistent Jupyter kernels"
license = "MIT"
repository = "https://github.com/Crazytieguy/alignment-hive"
homepage = "https://github.com/Crazytieguy/alignment-hive"
authors = ["Yoav Tzfati <yoav.tzfati@gmail.com>"]

default-run = "remote-kernels"

[dependencies]
anyhow = "1.0.101"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.59", features = ["derive"] }
dotenvy = "0.15.7"
futures = "0.3.32"
rand = "0.8"
reqwest = { version = "0.13.2", features = ["json"] }
rmcp = { version = "0.16.0", features = ["server", "transport-io"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ssh-key = { version = "0.6.7", features = ["ed25519", "rand_core"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
toml = "1.0.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.8"
uuid = { version = "1.21.0", features = ["v4"] }
